# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test_gendiff.yml
gendiff/: __init__.py  cli.py  file1.json  file_loader.py  gendiff_func.py  generator.py  parser.py
gendiff/formatters/: stylish.py
gendiff/scripts/: cli.py  gendiff_func.py
gendiff/tests/: test_gendiff.py
gendiff/tests/fixtures/: correct_result_flat.txt
tests/: test_generate_diff.py  test_generator.py  test_json.py  test_parser.py  test_plain.py  test_stylish.py
