[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Alex Susalev <figan915@gmail.com>"]
readme = "README.md"

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
gendiff = "gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pytest = "^8.3.2"
coverage = "^7.2.7"
pytest-cov = "^2.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
